# lib-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  text_preprocessing.py
.github/workflows/: docker_publish.yml
lib_ml/: preprocessing.py
